--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,17 @@ html {
   background-size: 900% 100%;
   border-radius: 25%;
 }
+
+.gradientReverse {
+  background: linear-gradient(
+    90deg,
+    rgba(27, 60, 146, 0) 0%,
+    rgba(45, 102, 248, 0.4) 100%
+  );
+
+  background-size: 900% 100%;
+  border-radius: 25%;
+}
 .howItWorks-info {
   text-align: left;
 }
