--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -5,6 +5,7 @@ nav {
 }
 nav a {
   cursor: pointer;
+  color: white;
 }
 
 nav a:hover {
@@ -17,10 +18,6 @@ ul {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-}
-
-li {
-  margin: 0 1rem;
 }
 
 .links {
